test/expected/explain_using_pfi_v-c.out
explain using f = void (*)(int)
        ^
9: error: "using": unsupported keyword in C
